--- a/templates/html/lightmode_settings.css
+++ b/templates/html/lightmode_settings.css
@@ -81,7 +81,8 @@
 --nav-breadcrumb-active-bg: ##F0;
 --nav-breadcrumb-color: ##44;
 --nav-breadcrumb-border-color: ##E5;
---nav-splitbar-image: url('splitbar.png');
+--nav-splitbar-bg-color: ##E0;
+--nav-splitbar-handle-color: ##AA;
 --nav-font-size-level1: 13px;
 --nav-font-size-level2: 10px;
 --nav-font-size-level3: 9px;
@@ -94,7 +95,7 @@
 --nav-menu-button-color: ##45;
 --nav-menu-background-color: white;
 --nav-menu-foreground-color: #555555;
---nav-menu-active-bg: ##F0;
+--nav-menu-active-bg: ##E0;
 --nav-menu-active-color: ##AA;
 --nav-menu-toggle-color: rgba(255, 255, 255, 0.5);
 --nav-arrow-color: ##AA;
@@ -120,7 +121,7 @@
 --search-results-foreground-color: ##58;
 --search-results-background-color: ##F0;
 --search-results-border-color: black;
---search-box-shadow: inset 0.5px 0.5px 3px 0px #555;
+--search-box-border-color: ##C0; /*transparent*/
 
 /** code fragments */
 --code-keyword-color: #008000;
