--- a/templates/html/search_common.css
+++ b/templates/html/search_common.css
@@ -16,7 +16,7 @@ dark-mode-toggle {
     white-space : nowrap;
     background: var(--search-background-color);
     border-radius: 0.65em;
-    box-shadow: var(--search-box-shadow);
+    border: 1px solid var(--search-box-border-color);
     z-index: 102;
 }
 
@@ -253,11 +253,10 @@ div.searchresults {
 /*---------------- External search page results */
 
 .pages b {
-   color: white;
+   color: var(--foreground-color);
    padding: 5px 5px 3px 5px;
-   background-image: var(--nav-gradient-active-image-parent);
-   background-repeat: repeat-x;
-   text-shadow: 0 1px 1px #000000;
+   background-color: var(--nav-menu-active-bg);
+   border-radius: 4px;
 }
 
 .pages {
