--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -25,7 +25,27 @@ h1.groupheader {
 }
 
 h2.groupheader {
-	border-bottom: 1px solid var(--group-header-separator-color);
+	/*border-bottom: 1px solid var(--group-header-separator-color);*/
+	box-shadow: 100px 0 var(--page-background-color),
+	           -100px 0 var(--page-background-color),
+		    100px 0.75px var(--group-header-separator-color),
+		   -100px 0.75px var(--group-header-separator-color),
+		    500px 0 var(--page-background-color),
+		   -500px 0 var(--page-background-color),
+		    500px 0.75px var(--group-header-separator-color),
+		   -500px 0.75px var(--group-header-separator-color),
+		    900px 0 var(--page-background-color),
+		   -900px 0 var(--page-background-color),
+		    900px 0.75px var(--group-header-separator-color),
+		   -900px 0.75px var(--group-header-separator-color),
+		   1400px 0 var(--page-background-color),
+		  -1400px 0 var(--page-background-color),
+		   1400px 0.75px var(--group-header-separator-color),
+		  -1400px 0.75px var(--group-header-separator-color),
+		   1900px 0 var(--page-background-color),
+		  -1900px 0 var(--page-background-color),
+		   1900px 0.75px var(--group-header-separator-color),
+		  -1900px 0.75px var(--group-header-separator-color);
 	color: var(--group-header-color);
 	font-size: 150%;
 	font-weight: normal;
@@ -583,9 +603,14 @@ th.dirtab {
 }
 
 hr {
-	height: 0px;
 	border: none;
-	border-top: 1px solid var(--separator-color);
+	margin-top: 16px;
+	margin-bottom: 16px;
+	height: 1px;
+	background-color: var(--group-header-separator-color);
+	border: 0;
+	margin-left: -12px;
+	margin-right: -8px;
 }
 
 hr.footer {
@@ -666,17 +691,35 @@ table.memberdecls {
 	border-top-right-radius: 4px;
 	border-top-left-radius: 4px;
 	margin-bottom: -1px;
-	background-image: var(--memdef-title-gradient-image);
-	background-repeat: repeat-x;
-	background-color: var(--memdef-title-background-color);
+        background-color: var(--memdef-proto-background-color);
 	line-height: 1.25;
-	font-weight: 300;
+	font-family: var(--font-family-monospace);
+	font-weight: 500;
+	font-size: 16px;
 	float:left;
+	box-shadow: 0 10px 0 -1px var(--memdef-proto-background-color),
+	            0 2px 8px 0 rgba(0,0,0,.075);
+	position: relative;
+}
+
+.memtitle:after {
+        content: '';
+        display: block;
+        background: var(--memdef-proto-background-color);
+        height: 10px;
+        bottom: -10px;
+        left: 0px;
+        right: -14px;
+        position: absolute;
+        border-top-right-radius: 6px;
 }
 
 .permalink
 {
-        font-size: 65%;
+	font-family: var(--font-family-monospace);
+        font-weight: 500;
+	line-height: 1.25;
+	font-size: 16px;
         display: inline-block;
         vertical-align: middle;
 }
@@ -703,6 +746,7 @@ table.memberdecls {
         transition: box-shadow 0.5s linear;
         display: table !important;
         width: 100%;
+	box-shadow: 0 2px 8px 0 rgba(0,0,0,.075);
 }
 
 .memitem.glow {
@@ -710,6 +754,8 @@ table.memberdecls {
 }
 
 .memname {
+	font-family: var(--font-family-monospace);
+	font-size: 13px;
         font-weight: 400;
         margin-left: 6px;
 }
@@ -725,10 +771,9 @@ table.memberdecls {
         padding: 6px 0px 6px 0px;
         color: var(--memdef-proto-text-color);
         font-weight: bold;
-        text-shadow: var(--memdef-proto-text-shadow);
         background-color: var(--memdef-proto-background-color);
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
         border-top-right-radius: 4px;
+        border-bottom: 1px solid var(--memdef-border-color);
 }
 
 .overload {
@@ -742,21 +787,8 @@ table.memberdecls {
         border-right: 1px solid var(--memdef-border-color);
         padding: 6px 10px 2px 10px;
         border-top-width: 0;
-        background-image:url('nav_g.png');
-        background-repeat:repeat-x;
-        background-color: var(--memdef-doc-background-color);
-        /* opera specific markup */
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
-        /* firefox specific markup */
-        -moz-border-radius-bottomleft: 4px;
-        -moz-border-radius-bottomright: 4px;
-        -moz-box-shadow: rgba(0, 0, 0, 0.15) 5px 5px 5px;
-        /* webkit specific markup */
-        -webkit-border-bottom-left-radius: 4px;
-        -webkit-border-bottom-right-radius: 4px;
-        -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
 }
 
 dl.reflist dt {
@@ -1116,7 +1148,6 @@ table.fieldtable {
 	padding-left: 4px;
 	background-image: none;
 	background: var(--page-background-color);
-	/*border-top: 1px solid var(--nav-breadcrumb-separator-color);*/
 	border-bottom: 1px solid var(--nav-breadcrumb-separator-color);
 	font-size: var(--nav-font-size-level1);
 	font-family: var(--font-family-nav);
@@ -1229,8 +1260,6 @@ div.ingroups a
 
 div.header
 {
-        /*background-image: var(--header-gradient-image);
-        background-repeat:repeat-x;*/
 	margin:  0px;
 	background-color: var(--header-background-color);
 	border-bottom: 1px solid var(--header-separator-color);
