Modernize declaration/brief section of the HTML output

--- a/templates/html/darkmode_settings.css
+++ b/templates/html/darkmode_settings.css
@@ -45,6 +45,7 @@
 --memdecl-separator-color: ##35;
 --memdecl-foreground-color: #BBB;
 --memdecl-template-color: ##90;
+--memdecl-border-color: ##40;
 
 /* detailed member list */
 --memdef-border-color: ##28;
