--- a/templates/html/search_sidebar.css
+++ b/templates/html/search_sidebar.css
@@ -4,6 +4,11 @@
 	margin: 5px;
 }
 
+#MSearchSelect {
+	width: 16px !important;
+	margin: 0 0 4px 0.3em !important;
+}
+
 dark-mode-toggle {
         padding-top: 8px;
 }
