Modernize search results window

--- a/templates/html/darkmode_settings.css
+++ b/templates/html/darkmode_settings.css
@@ -119,10 +119,10 @@
 --search-filter-border-color: ##90;
 --search-filter-highlight-text-color: ##C5;
 --search-filter-highlight-bg-color: ##30;
---search-results-background-color: ##10;
+--search-results-background-color: black;
 --search-results-foreground-color: ##A0;
---search-results-border-color: ##90;
---search-box-border-color: ##30;
+--search-results-border-color: ##40;
+--search-box-border-color: ##40;
 
 /** code fragments */
 --code-keyword-color: #CC99CD;
@@ -167,7 +167,7 @@
 --font-family-normal: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 --font-family-monospace: 'JetBrains Mono',Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace,fixed;
 --font-family-nav: 'Lucida Grande',Geneva,Helvetica,Arial,sans-serif;
---font-family-title: Tahoma,Arial,sans-serif;
+--font-family-title: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 --font-family-toc: Verdana,'DejaVu Sans',Geneva,sans-serif;
 --font-family-search: Arial,Verdana,sans-serif;
 --font-family-icon: Arial,Helvetica;
