--- a/templates/html/lightmode_settings.css
+++ b/templates/html/lightmode_settings.css
@@ -120,8 +120,8 @@
 --search-filter-highlight-text-color: white;
 --search-filter-highlight-bg-color: ##50;
 --search-results-foreground-color: ##58;
---search-results-background-color: ##F0;
---search-results-border-color: black;
+--search-results-background-color: white;
+--search-results-border-color: ##A0;
 --search-box-border-color: ##C0; /*transparent*/
 
 /** code fragments */
@@ -167,7 +167,7 @@
 --font-family-normal: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 --font-family-monospace: 'JetBrains Mono',Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace,fixed;
 --font-family-nav: 'Lucida Grande',Geneva,Helvetica,Arial,sans-serif;
---font-family-title: Tahoma,Arial,sans-serif;
+--font-family-title: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 --font-family-toc: Verdana,'DejaVu Sans',Geneva,sans-serif;
 --font-family-search: Arial,Verdana,sans-serif;
 --font-family-icon: Arial,Helvetica;
