Modernize search icon in HTML output

--- a/templates/html/darkmode_settings.css
+++ b/templates/html/darkmode_settings.css
@@ -113,7 +113,7 @@
 --search-foreground-color: #C5C5C5;
 --search-magnification-image: url('mag_d.svg');
 --search-magnification-select-image: url('mag_seld.svg');
---search-active-color: #C5C5C5;
+--search-active-color: #F5F5F5;
 --search-filter-background-color: ##10;
 --search-filter-foreground-color: ##A0;
 --search-filter-border-color: ##90;
