--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -1024,7 +1024,6 @@ div.directory {
 	display: inline-block;
 	width: 16px;
 	height: 14px;
-	opacity: 0.5;
 	transition: opacity 0.3s ease;
 }
 
@@ -1045,17 +1044,9 @@ span.arrowhead.opened {
 	transform: rotate(45deg);
 }
 
-
-@media (hover: none) {
-	.item a .arrow .arrowhead, td.entry .arrow .arrowhead {
-		opacity: 1;
-	}
-}
-
-@media (hover: hover) {
-	#nav-tree-contents:hover .item a span.arrow, table:hover td.entry span.arrow {
-		opacity: 1;
-	}
+.selected span.arrowhead {
+	border-right: 2px solid var(--nav-arrow-selected-color);
+	border-bottom: 2px solid var(--nav-arrow-selected-color);
 }
 
 .icon {
@@ -1108,6 +1099,21 @@ span.arrowhead.opened {
 	box-sizing: content-box;
 }
 
+.folder-icon::after {
+	content: '';
+	position: absolute;
+	top: 2px;
+	left: -1px;
+	width: 16px;
+	height: 7px;
+	background-color: var(--icon-folder-open-fill-color);
+	border: 1px solid var(--icon-folder-border-color);
+	border-radius: 7px 7px 2px 2px;
+	transform-origin: top left;
+	opacity: 0;
+	transition: all 0.3s linear;
+}
+
 .folder-icon::before {
 	content: '';
 	position: absolute;
@@ -1123,16 +1129,8 @@ span.arrowhead.opened {
 }
 
 .folder-icon.open::after {
-	content: '';
-	position: absolute;
 	top: 3px;
-	left: -1px;
-	width: 16px;
-	height: 7px;
-	background-color: var(--icon-folder-open-fill-color);
-	border: 1px solid var(--icon-folder-border-color);
-	border-radius: 7px 7px 2px 2px;
-	transform-origin: top left;
+	opacity: 1;
 }
 
 .doc-icon {
